Rename: propice -> openprs everywhere Install all genom includes into includedir/genom Put tcl and openprs client into server/tcl and server/openprs
Minor fixes to the build system:
    - remove TOPBUILD and use autoconf-provided topbuilddir instead
    - rename topbuild into topbuilddir for the sake of consistency
    - use the autoconf-provided INSTALL:
        * use cmp in the Makefile where it is needed
        * make the dirs explicitely (added mkinstalldirs for that)

--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -30,11 +30,11 @@ $commentbegin$
 #
 $commentend$
 
-topbuild=.
-include $(topbuild)/config.mk
-
+topbuilddir=.
 topsrcdir=	@top_srcdir@
 srcdir=		@srcdir@
+
+include $(topbuilddir)/config.mk
 
 SUBDIRS= $(serverdir) $(codelsdir)
 
