--- a/canvas/Makefile.in
+++ b/canvas/Makefile.in
@@ -28,18 +28,18 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-TOPBUILD=..
-include $(TOPBUILD)/config.mk
-
-topsrcdir=	@top_srcdir@
-srcdir=		@srcdir@
+topbuilddir= @top_builddir@
+topsrcdir=	 @top_srcdir@
+srcdir=		   @srcdir@
 
 prefix=		@prefix@
 exec_prefix=	@exec_prefix@
 datadir=	@datadir@
 
+INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
 
+include $(topbuilddir)/config.mk
 
 # -----------------------------------------------------------------------
 
@@ -95,29 +95,28 @@ flist+=\
 	server/scopeLib.h		\
 	server/scopeMain.c		\
 	server/scope_script		\
-	server/tclClient.tcl		\
-	server/tclClientPoster.tcl	\
-	server/tclClientRqst.tcl	\
-	server/tclEpilog.c		\
-	server/tclPoster.c		\
-	server/tclProlog.c		\
-	server/tclRqst.c		\
 	server/type.h
 
-# propice templates
+# TCL templates
+flist += \
+	server/tcl/tclClient.tcl		\
+	server/tcl/tclClientPoster.tcl	\
+	server/tcl/tclClientRqst.tcl	\
+	server/tcl/tclEpilog.c		\
+	server/tcl/tclPoster.c		\
+	server/tcl/tclProlog.c		\
+	server/tcl/tclRqst.c
+
+# OpenPRS templates
 flist+=\
-	propice/Makefile		\
-	propice/Makefile.protos		\
-	propice/Makefile.unix		\
-	propice/Makefile.vxworks	\
-	propice/propice.c		\
-	propice/propiceDecode.c		\
-	propice/propiceDecode.h		\
-	propice/propiceEncode.c		\
-	propice/propiceEncode.h		\
-	propice/propicePoster.op	\
-	propice/propiceProto.h		\
-	propice/propiceRqst.op
+	server/openprs/openprs.c		\
+	server/openprs/openprsDecode.c		\
+	server/openprs/openprsDecode.h		\
+	server/openprs/openprsEncode.c		\
+	server/openprs/openprsEncode.h		\
+	server/openprs/openprsPoster.op	\
+	server/openprs/openprsProto.h		\
+	server/openprs/openprsRqst.op
 
 # codels templates
 flist+=\
@@ -132,6 +131,7 @@ flist+=\
 	start.pl			\
 	end.pl
 
+dirs=autoconf codels openprs server server/tcl server/openprs
 
 # -----------------------------------------------------------------------
 
@@ -140,8 +140,15 @@ all:;
 
 .PHONY: install
 install: all
+	@for d in $(dirs); do \
+		$(MKINSTALLDIRS) $(CANVASDIR)/$$d; \
+  done
+
 	@for f in $(flist); do						\
-		$(LTINSTALL_DATA) $(srcdir)/$$f $(CANVASDIR)/$$f;	\
+		if ! $(CMP) $(srcdir)/$$f $(CANVASDIR)/$$f; then \
+				echo "$(INSTALL_DATA) $(srcdir)/$$f $(CANVASDIR)/$$f";	\
+				$(INSTALL_DATA) $(srcdir)/$$f $(CANVASDIR)/$$f;	\
+		fi; \
 	done
 
 .PHONY: clean distclean
