--- a/configure.in
+++ b/configure.in
@@ -34,6 +34,7 @@ AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_LEX
 AC_PROG_YACC
+AC_PROG_INSTALL
 
 AC_ARG_VAR(LATEX, "LaTeX text formatting and typesetting")
 AC_CHECK_PROGS(LATEX, [pdflatex latex], [:])
