--- a/doc/user_guide/Makefile.in
+++ b/doc/user_guide/Makefile.in
@@ -28,17 +28,18 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-TOPBUILD=../..
-include $(TOPBUILD)/config.mk
+topsrcdir=	  @top_srcdir@
+srcdir=		    @srcdir@
+topbuilddir=  @top_builddir@
 
-topsrcdir=	@top_srcdir@
-srcdir=		@srcdir@
-
-prefix=		@prefix@
+prefix=		    @prefix@
 exec_prefix=	@exec_prefix@
-datadir=	@datadir@/genom
+datadir=	    @datadir@/genom
 
+INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
+
+include $(topbuilddir)/config.mk
 
 ifneq (,$(findstring pdf,$(LATEX)))
 genom_doc=	genom.pdf
@@ -74,7 +75,7 @@ fig-links:
 
 ifneq (:,$(LATEX))
 install: all
-	$(LTINSTALL_DATA) $(genom_doc) $(datadir)/$(genom_doc)
+	$(INSTALL_DATA) $(genom_doc) $(datadir)/$(genom_doc)
 else
 install:
 endif
