--- a/emacs/Makefile.in
+++ b/emacs/Makefile.in
@@ -28,18 +28,19 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-TOPBUILD=..
-include $(TOPBUILD)/config.mk
 
-topsrcdir=	@top_srcdir@
-srcdir=		@srcdir@
+topsrcdir=	 @top_srcdir@
+srcdir=		   @srcdir@
+topbuilddir= @top_builddir@
 
-prefix=		@prefix@
-exec_prefix=	@exec_prefix@
-datadir=	@datadir@/genom
+prefix=		   @prefix@
+exec_prefix= @exec_prefix@
+datadir=	   @datadir@/genom
 
+INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
 
+include $(topbuilddir)/config.mk
 
 # -----------------------------------------------------------------------
 
@@ -54,7 +55,7 @@ all:;
 .PHONY: install
 install: all
 	@for f in $(flist); do					\
-		$(LTINSTALL_DATA) $(srcdir)/$$f $(datadir)/$$f;	\
+		$(INSTALL_DATA) $(srcdir)/$$f $(datadir)/$$f;	\
 	done
 
 .PHONY: clean 
