--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -30,19 +30,20 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-TOPBUILD=	..
-topsrcdir=	@top_srcdir@
-srcdir=		@srcdir@
+topsrcdir=	 @top_srcdir@
+srcdir=		   @srcdir@
+topbuilddir= @top_builddir@
 
-prefix=		@prefix@
-exec_prefix=	@exec_prefix@
-libdir=		@libdir@
+prefix=		   @prefix@
+exec_prefix= @exec_prefix@
+libdir=		   @libdir@
 
-include $(TOPBUILD)/config.mk
-
+INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
 
-CPPFLAGS+=	-I$(TOPBUILD) -I$(topsrcdir)/include -I$(srcdir) -I.
+include $(topbuilddir)/config.mk
+
+CPPFLAGS+=	-I$(topbuilddir) -I$(topsrcdir)/include -I$(srcdir) -I.
 CPPFLAGS+= $(PORTLIB_CFLAGS) -D$(ENDIANNESS)
 
 SHLIB_MAJOR=	1
@@ -76,6 +77,7 @@ all: all-os $(LIB)
 
 .PHONY: install
 install:: $(LIB)
+	$(MKINSTALLDIRS) $(libdir)
 	$(LTINSTALL) $(LIB) $(libdir)/$(LIB)
 
 $(LIB): $(OBJS)
@@ -89,7 +91,7 @@ $(LIB): $(OBJS)
 	$(LTCC) -c $(CPPFLAGS) $(CFLAGS) -o $@ $<
 
 clean:
-	$(TOPBUILD)/libtool --mode=clean rm -f $(OBJS) $(LIB)
+	$(topbuilddir)/libtool --mode=clean rm -f $(OBJS) $(LIB)
 
 distclean: clean
 	rm -f DEPENDANCES Makefile
