--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -29,18 +29,19 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-TOPBUILD=..
-include $(TOPBUILD)/config.mk
 
 topsrcdir=	@top_srcdir@
 srcdir=		@srcdir@
+topbuilddir= @top_builddir@
 
 prefix=		@prefix@
 exec_prefix=	@exec_prefix@
 bindir=		@bindir@
 
+INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
 
+include $(topbuilddir)/config.mk
 
 # -----------------------------------------------------------------------
 
