--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -28,10 +28,9 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-TOPBUILD=..
-
-topsrcdir=	@top_srcdir@
-srcdir=		@srcdir@
+topsrcdir=	 @top_srcdir@
+srcdir=	 	   @srcdir@
+topbuilddir= @top_builddir@
 
 prefix=		@prefix@
 exec_prefix=	@exec_prefix@
@@ -40,11 +39,12 @@ libdir=		@libdir@
 includedir=	@includedir@
 datadir=	@datadir@
 
-include $(TOPBUILD)/config.mk
-
+INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
 
-CPPFLAGS+=	-I$(TOPBUILD) -I$(topsrcdir)/include -I$(srcdir) -I.
+include $(topbuilddir)/config.mk
+
+CPPFLAGS+=	-I$(topbuilddir) -I$(topsrcdir)/include -I$(srcdir) -I.
 CPPFLAGS+=	$(PORTLIB_CFLAGS)
 
 LDFLAGS+=	@LEXLIB@
@@ -67,11 +67,11 @@ SRCS = \
 	moduleInitGen.c		\
 	msgLibGen.c		\
 	posterLibGen.c		\
-	propiceEncodeGen.c	\
-	propiceDecodeGen.c	\
-	propiceMakeGen.c	\
-	propiceOpGen.c		\
-	propiceGen.c		\
+	openprsEncodeGen.c	\
+	openprsDecodeGen.c	\
+	openprsMakeGen.c	\
+	openprsOpGen.c		\
+	openprsGen.c		\
 	typeGen.c		\
 	printGen.c		\
 	printXMLGen.c		\
@@ -95,7 +95,8 @@ OBJS = $(SRCS:.c=.lo)
 all: $(GENOM)
 
 install: all
-	$(LTINSTALL) $(GENOM) $(bindir)/$(GENOM)
+	$(MKINSTALLDIRS) $(bindir)
+	$(LTINSTALL) $(GENOM) $(bindir)
 
 $(GENOM): $(OBJS) ../lib/lib$(GENOM).la
 	$(LTLD) -static $(CFLAGS) $(OBJS) -o $@ \
@@ -119,7 +120,7 @@ parser.tab.lo: parser.tab.c
 	$(YACC) -v -d -b $* $<
 
 clean:
-	$(TOPBUILD)/libtool --mode=clean rm -f $(OBJS) $(GENOM)
+	$(topbuilddir)/libtool --mode=clean rm -f $(OBJS) $(GENOM)
 	rm -f $(SRCS_YACC:%.y=%.tab.h) $(SRCS_YACC:%.y=%.tab.c) parser.output
 	rm -f $(SRCS_LEX:%.l=%.lex.c)
 
