Added the NEWARGS variable to add new argument to genom in make regen

--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -76,7 +76,7 @@ make_subdirs=\
 
 .PHONY: regen
 regen:
-	(cd $(topsrcdir); $(GENOM) $(GENFLAGS) $(GENFILE))
+	(cd $(topsrcdir); $(GENOM) $(GENFLAGS) $(GENFILE) $(NEWARGS))
 	./config.status
 
 
