--- a/doc/user_guide/Makefile.in
+++ b/doc/user_guide/Makefile.in
@@ -28,9 +28,9 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-topsrcdir=	  @top_srcdir@
+top_srcdir=	  @top_srcdir@
 srcdir=		    @srcdir@
-topbuilddir=  @top_builddir@
+top_builddir=  @top_builddir@
 
 prefix=		    @prefix@
 exec_prefix=	@exec_prefix@
@@ -39,7 +39,7 @@ datadir=	    @datadir@/genom
 INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
 
-include $(topbuilddir)/config.mk
+include $(top_builddir)/config.mk
 
 ifneq (,$(findstring pdf,$(LATEX)))
 genom_doc=	genom.pdf
