--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -30,9 +30,9 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-topsrcdir=	 @top_srcdir@
+top_srcdir=	 @top_srcdir@
 srcdir=		   @srcdir@
-topbuilddir= @top_builddir@
+top_builddir= @top_builddir@
 
 prefix=		   @prefix@
 exec_prefix= @exec_prefix@
@@ -41,9 +41,9 @@ libdir=		   @libdir@
 INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
 
-include $(topbuilddir)/config.mk
+include $(top_builddir)/config.mk
 
-CPPFLAGS+=	-I$(topbuilddir) -I$(topsrcdir)/include -I$(srcdir) -I.
+CPPFLAGS+=	-I$(top_builddir) -I$(top_srcdir)/include -I$(srcdir) -I.
 CPPFLAGS+= $(PORTLIB_CFLAGS) -D$(ENDIANNESS)
 
 SHLIB_MAJOR=	1
@@ -91,7 +91,7 @@ $(LIB): $(OBJS)
 	$(LTCC) -c $(CPPFLAGS) $(CFLAGS) -o $@ $<
 
 clean:
-	$(topbuilddir)/libtool --mode=clean rm -f $(OBJS) $(LIB)
+	$(top_builddir)/libtool --mode=clean rm -f $(OBJS) $(LIB)
 
 distclean: clean
 	rm -f DEPENDANCES Makefile
@@ -104,5 +104,5 @@ include DEPENDANCES
 endif
 
 # os-specific rules
-include $(topsrcdir)/config.$(OSAPI).mk
+include $(top_srcdir)/config.$(OSAPI).mk
 
