--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -30,9 +30,9 @@
 #
 
 
-topsrcdir=	@top_srcdir@
+top_srcdir=	@top_srcdir@
 srcdir=		@srcdir@
-topbuilddir= @top_builddir@
+top_builddir= @top_builddir@
 
 prefix=		@prefix@
 exec_prefix=	@exec_prefix@
@@ -41,7 +41,7 @@ bindir=		@bindir@
 INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
 
-include $(topbuilddir)/config.mk
+include $(top_builddir)/config.mk
 
 # -----------------------------------------------------------------------
 
