--- a/tclserv/server/Makefile.in
+++ b/tclserv/server/Makefile.in
@@ -28,9 +28,9 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-topsrcdir=	 @top_srcdir@
+top_srcdir=	 @top_srcdir@
 srcdir=		   @srcdir@
-topbuilddir= @top_builddir@
+top_builddir= @top_builddir@
 
 prefix=		    @prefix@
 exec_prefix=	@exec_prefix@
@@ -42,9 +42,9 @@ datadir=	  @datadir@/tclserv
 INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
 
-include $(topbuilddir)/config.mk
+include $(top_builddir)/config.mk
 
-CPPFLAGS+=	-I$(topbuilddir) -I$(topsrcdir)/include -I$(srcdir) -I.
+CPPFLAGS+=	-I$(top_builddir) -I$(top_srcdir)/include -I$(srcdir) -I.
 CPPFLAGS+=	$(PORTLIB_CFLAGS)
 CPPFLAGS+=	-D$(ENDIANNESS)
 
@@ -111,7 +111,7 @@ install:: $(TCLSERV)
 
 .PHONY: clean
 clean:
-	$(topbuilddir)/libtool --mode=clean rm -f $(OBJS) $(TCLSERV)
+	$(top_builddir)/libtool --mode=clean rm -f $(OBJS) $(TCLSERV)
 
 distclean: clean
 	rm -f DEPENDANCES Makefile
